--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,30 @@
-// prettier-ignore
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",     /* Recommended React Native TSConfig base */
-  "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
-    /* Completeness */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+   "compilerOptions": {
+      "lib": ["dom", "dom.iterable", "esnext"],
+      "allowJs": true,
+      "skipLibCheck": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "noFallthroughCasesInSwitch": true,
+      "module": "esnext",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "noEmit": true,
+      // "jsx": "react-jsx",
+      "experimentalDecorators": true,
+      "jsx": "react-native",
+      // "lib": ["es2017"],
+      "target": "esnext"
+   },
+   "include": ["src", "test-utils"],
+   "exclude": [
+      "*.js",
+      "node_modules",
+      "babel.config.js",
+      "metro.config.js",
+      "jest.config.js"
+   ]
 }
