--- a/package.json
+++ b/package.json
@@ -1,60 +1,72 @@
 {
-  "name": "bclimate",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/geolocation": "^3.0.4",
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.1.2",
-    "axios": "^1.2.2",
-    "date-fns": "^2.29.3",
-    "iconsax-react-native": "^0.0.8",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.7.0",
-    "styled-components": "^5.3.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+   "name": "bclimate",
+   "version": "0.0.1",
+   "private": true,
+   "scripts": {
+      "android": "react-native run-android",
+      "ios": "react-native run-ios",
+      "start": "react-native start",
+      "test": "jest",
+      "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+   },
+   "dependencies": {
+      "@react-native-async-storage/async-storage": "^1.17.11",
+      "@react-native-community/blur": "^4.3.0",
+      "@react-native-community/geolocation": "^3.0.4",
+      "@react-navigation/bottom-tabs": "^6.5.3",
+      "@react-navigation/native": "^6.1.2",
+      "axios": "^1.2.2",
+      "date-fns": "^2.29.3",
+      "iconsax-react-native": "^0.0.8",
+      "react": "18.1.0",
+      "react-native": "0.70.6",
+      "react-native-safe-area-context": "^4.4.1",
+      "react-native-screens": "^3.18.2",
+      "react-native-svg": "^13.7.0",
+      "styled-components": "^5.3.6"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.12.9",
+      "@babel/runtime": "^7.12.5",
+      "@react-native-community/eslint-config": "^2.0.0",
+      "@testing-library/jest-native": "^5.4.1",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/react-native": "^11.5.0",
+      "@tsconfig/react-native": "^2.0.2",
+      "@types/axios": "^0.14.0",
+      "@types/jest": "^26.0.23",
+      "@types/react": "^18.0.21",
+      "@types/react-native": "^0.70.6",
+      "@types/react-test-renderer": "^18.0.0",
+      "@types/styled-components": "^5.1.26",
+      "@types/styled-components-react-native": "^5.2.0",
+      "@typescript-eslint/eslint-plugin": "^5.37.0",
+      "@typescript-eslint/parser": "^5.37.0",
+      "babel-jest": "^26.6.3",
+      "eslint": "^7.32.0",
+      "jest": "^26.6.3",
+      "jest-styled-components": "^7.1.1",
+      "metro-react-native-babel-preset": "0.72.3",
+      "react-test-renderer": "18.1.0",
+      "typescript": "^4.8.3"
+   },
+   "jest": {
+      "preset": "react-native",
+      "setupFiles": ["./jestSetupFile.js"],
+      "moduleNameMapper": {
+         "test-utils": "<rootDir>/test-utils",
+         "axios": "axios/dist/node/axios.cjs"
+      },
+      "setupFilesAfterEnv": [
+         "@testing-library/jest-native/extend-expect"
+      ],
+      "moduleFileExtensions": [
+         "ts",
+         "tsx",
+         "js",
+         "jsx",
+         "json",
+         "node"
+      ]
+   }
 }
